# ChemPyPlot

./: README.md
backup/: 实验数据处理.ipynb
backup/temp/OCSR/: CMakeLists.txt  main.cpp
general/: util.py
general/标准曲线/: untitled.py
simple/3D-简易3D绘制/: untitled.py
simple/吸收曲线/: untitled.py
simple/标准曲线/: untitled.py
simple/自定义曲线拟合/: untitled.py
